# ScalarFieldViewer

./: CMakeLists.txt  CMakeUserPresets.json  init.sh  notes  vcpkg.json
Isosurface/: ArcballCamera.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesGPU.cpp  MarchingCubesGPU.h  MarchingCubesLUT.cpp  MarchingCubesLUT.h  ShaderProgram.h  Texture.cpp  Texture.h  WireframeBoundingBox.cpp  WireframeBoundingBox.h  main.cpp
Isosurface/Shaders/: MarchingCubes.geom  MarchingCubes.vert  Phong.frag  Phong.vert  SlicingPlane.frag  SlicingPlaneTex.vert
Slicer/: ArcballCamera.cpp  ShaderProgram.cpp  Texture.cpp  Texture.h  main.cpp
Slicer/Shaders/: SlicingPlane.vert  SlicingPlaneTex.frag  Wireframe.vert
VTKParser/: VTKParser.cpp  VTKParser.h
VTKParserTest/: main.cpp
